fix(button): misaligned icon prefix / suffix (#499)

--- a/src/components/button/themes/button/light/button.base.scss
+++ b/src/components/button/themes/button/light/button.base.scss
@@ -6,6 +6,10 @@ $slot-spacing: var(--igc-spacing-large);
 :host {
     display: inline-flex;
     vertical-align: middle;
+
+    ::slotted(span) {
+        display: inline-flex;
+    }
 }
 
 [part='base'] {
